--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -14,6 +14,9 @@
           <a class="nav-link" href="/users/sign_up"><i class="fa fa-plus-circle"></i> Register</a>
         </li>
       <% elsif @is_teacher %>
+        <li class="nav-item">
+          <a class="nav-link" href="/users"><i class="fa fa-users"></i> Users</a>
+        </li>
       <% elsif @is_student %>
       <% end %>
 
