--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -17,6 +17,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/users"><i class="fa fa-users"></i> Users</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/klasses"><i class="fa fa-compass"></i> Classes</a>
+        </li>
       <% elsif @is_student %>
       <% end %>
 
