--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -20,6 +20,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/klasses"><i class="fa fa-compass"></i> Classes</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/registrations"><i class="fa fa-map-o"></i> Registrations</a>
+        </li>
       <% elsif @is_student %>
       <% end %>
 
