--- a/app/views/klasses/section_list.html.erb
+++ b/app/views/klasses/section_list.html.erb
@@ -3,14 +3,14 @@
 <div class="row">
   <div class="col-8">
     <div>
-      <% @klass.sections.each do |s| %>
+      <% @klass.sections.order(position: 'asc').each do |s| %>
         <div style="background-color: #cccccc;" class="border border-danger rounded p-1 m-3">
-          <%= link_to '🔺' %>
-          <%= link_to '🔻' %>
-
+          <%= link_to '🔺', goup_klass_path(@klass, s), method: :put %>
+          <%= link_to '🔻', godown_klass_path(@klass, s), method: :put %>
 
           <h1><%= s.title %></h1>
           <p><%= s.content %></p>
+          <p><%= s.position %></p>
           <div>
             <%= link(s.link) %>
           </div>
